Add_Cloudynary và sửa upload ảnh với background classroom, avatar, image leave Request

--- a/DoAnMon/Areas/Identity/Pages/Account/Manage/Index.cshtml
+++ b/DoAnMon/Areas/Identity/Pages/Account/Manage/Index.cshtml
@@ -82,7 +82,7 @@
 								}
 								else
 								{
-									<img id="selected-image" src="/Imgs_avtUser/@Model.Input.ProfilePictureUrl" alt="No Image" onerror="this.onerror=null; this.src='/Images/avatar.jpg';" style="object-fit:cover;" />
+									<img id="selected-image" src="@Model.Input.ProfilePictureUrl" alt="No Image" onerror="this.onerror=null; this.src='/Images/avatar.jpg';" style="object-fit:cover;" />
 
 								}
 							</div>
