--- a/DoAnMon/Views/ClassRooms/Index.cshtml
+++ b/DoAnMon/Views/ClassRooms/Index.cshtml
@@ -314,7 +314,7 @@
                             <div class="card-item" data-id="@viewModel.ClassRoom.Id">
                                 <div class="card-inner">
                                     <div class="card-front">
-                                        <img src="~/images/@viewModel.ClassRoom.backgroundUrl" class="card-img" alt="Front Image">
+                                        <img src="@viewModel.ClassRoom.backgroundUrl" class="card-img" alt="Front Image">
                                     </div>
                                     <div class="card-back">
                                         <div class="card">
