--- a/DoAnMon/Views/Shared/_LoginPartial.cshtml
+++ b/DoAnMon/Views/Shared/_LoginPartial.cshtml
@@ -86,7 +86,15 @@
     {
         <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle text-dark" id="userDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                <img class="custom-avt" src="~/Imgs_avtUser/@user.UrlAvt" alt="@user.Name" width="46px" height="46px" />
+
+                @if (string.IsNullOrEmpty(user.UrlAvt))
+					{
+						<img class="custom-avt" src="~/Imgs_avtUser/avatar.jpg" alt="@user.Name" width="46px" height="46px" />
+					}
+					else
+					{
+                        <img class="custom-avt" src="@user.UrlAvt" alt="@user.Name" width="46px" height="46px" />
+					}
             </a>
             <div class="dropdown-menu" aria-labelledby="userDropdown">
                 <div class="dropdown-item">
