--- a/DoAnMon/Views/ClassRooms/Details.cshtml
+++ b/DoAnMon/Views/ClassRooms/Details.cshtml
@@ -2833,12 +2833,12 @@
 
 					<div class="form-group">
 						<label for="Reason">Lý do:</label>
-						<textarea class="form-control size-khungtaodontu" id="Reason" name="Reason" rows="4" style="resize: none;"></textarea>
+						<textarea required class="form-control size-khungtaodontu" id="Reason" name="Reason" rows="4" style="resize: none;"></textarea>
 					</div>
 
 					<div class="form-group">
 						<label for="ImageUpload">Hình ảnh minh chứng:</label>
-						<input required type="file" class="form-control" id="ImageUpload" name="ImageUpload" />
+						<input required type="file" class="form-control" id="ImageUpload" name="ImageUpload" accept="image/*"/>
 					</div>
 
 					<button type="button" class="close-btn" onclick="document.getElementById('leaveRequestFormContainer').style.display = 'none'">Đóng</button>
@@ -4863,3 +4863,14 @@
 		document.querySelector('.dropdown1').style.display = 'none';
 	}
 </script>
+<script>
+    document.getElementById('ImageUpload').addEventListener('change', function (event) {
+        const file = event.target.files[0];
+        if (file) {
+            if (!file.type.startsWith('image/')) {
+                toastr.error("Chỉ được tải lên file hình ảnh !!!", "Lỗi", {timeOut: 3000});
+                event.target.value = ''; // Reset input
+            }
+        }
+    });
+</script> @* Chỉ cho phép hình ảnh trong chọn hình minh chứng xin nghỉ*@
