--- a/DoAnMon/Views/ClassRooms/_MessagePartial.cshtml
+++ b/DoAnMon/Views/ClassRooms/_MessagePartial.cshtml
@@ -123,9 +123,20 @@
             @if (alignmentClass == "other-user")
             {
                 <div class="avatar" style="width: 50px; height: 50px; background-color: #ddd; border-radius: 50%; text-align: center; line-height: 40px; margin-left: 10px; font-size: 18px; font-weight: bold; color: #555;">
-                    <img src="/Imgs_avtUser/@chattinguser.UrlAvt"
-                         alt="Avatar"
-                         style="width: 100%; height: 100%; object-fit: cover;border-radius: 50%">
+                    @if (string.IsNullOrEmpty(chattinguser.UrlAvt))
+                    {
+                            <img src="/Imgs_avtUser/avatar.jpg"
+                                 alt="Avatar"
+                                 style="width: 100%; height: 100%; object-fit: cover;border-radius: 50%">
+                    }
+                    else
+                    {
+                            <img src="@chattinguser.UrlAvt"
+                                 alt="Avatar"
+                                 style="width: 100%; height: 100%; object-fit: cover;border-radius: 50%">
+                    }
+                    
+                    
                 </div>
             }
             <div class="message-box">
